# solder_bump_design

./: .gitignore  README.md  gp.py  gpr_compare.py  main.py  pareto_chart.ipynb  plot_data.py  process_conc_dataset.py  pyproject.toml  qmc_scipy_test.py  read_stresstool.ipynb  read_stresstool.py  reg_demo.ipynb  solder_ball_diagram.pptx  solder_ball_gpr.py  solder_bump-cover_letter.docx  thesis_report.txt  val_test_postprocess.ipynb  variogram.py  variogram_gpr.py  variogram_gpr_2.py  variogram_gpr_3.py  variogram_gpr_4.py  variogram_gpr_5.py  variogram_gpr_6.py  variogram_gpr_7.py  variogram_skgstat.py
datasets/: Kriging.csv  Kriging_data.csv  Quadratic.csv  solder_ball_conc.csv  stresstool_update.xls  val_test_total_rpdnoise_MaternKernel_noiseless.csv  val_test_total_rpdnoise_MaternKernel_noisy.csv  val_test_total_rpdnoise_RBFKernel_noiseless.csv  val_test_total_rpdnoise_RBFKernel_noisy.csv  val_test_total_rpdnoise_RQKernel_noiseless.csv  val_test_total_rpdnoise_RQKernel_noisy.csv
