[project]
name = "solder-bump-design"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "f3dasm==1.2.0",
    "gpytorch>=1.14.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scikit-gstat>=1.0.23",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xlrd>=2.0.2",
]
